--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
     "@auth/core": "^0.16.1",
     "@auth/drizzle-adapter": "^0.3.3",
     "@neondatabase/serverless": "^0.6.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
+    "ky": "^1.0.1",
     "lucide-react": "^0.287.0",
-    "nanoid": "^5.0.1",
+    "nanoid": "^5.0.2",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.8.6",
