--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
+    "drizzle-zod": "^0.5.1",
     "ky": "^1.0.1",
     "lucide-react": "^0.287.0",
     "nanoid": "^5.0.2",
