--- a/package.json
+++ b/package.json
@@ -13,21 +13,27 @@
   },
   "dependencies": {
     "@auth/core": "^0.16.1",
-    "@auth/drizzle-adapter": "^0.3.3",
+    "@auth/drizzle-adapter": "^0.3.5",
+    "@hookform/resolvers": "^3.3.2",
     "@neondatabase/serverless": "^0.6.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "drizzle-zod": "^0.5.1",
-    "ky": "^1.0.1",
+    "ky": "^1.1.0",
     "lucide-react": "^0.287.0",
     "nanoid": "^5.0.2",
     "next": "13.5.4",
-    "next-auth": "^4.23.2",
+    "next-auth": "^4.24.3",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
@@ -35,12 +41,12 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.8.6",
-    "@types/react": "^18.2.28",
-    "@types/react-dom": "^18.2.13",
+    "@types/node": "^20.8.8",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
     "drizzle-kit": "^0.19.13",
-    "eslint": "^8.51.0",
+    "eslint": "^8.52.0",
     "eslint-config-next": "13.5.4",
     "pg": "^8.11.3",
     "postcss": "^8.4.31",
